# dED

./: .gitignore  README.md
anchor/: Anchor.toml
anchor/programs/anchor/src/: lib.rs
anchor/tests/: anchor.ts
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  marketplace.css
frontend/src/components/: AssetRenderer.jsx  FileUploader.jsx  Navigation.jsx
frontend/src/hooks/: useWalletStorageCleanup.js
frontend/src/pages/: CourseView.jsx  Dashboard.jsx  Login.jsx  Marketplace.jsx  MyPurchases.jsx  MyUploads.jsx  UploadCourse.jsx
frontend/src/providers/: WalletContextProvider.jsx
frontend/src/utils/: irys.js  lit.js  solana.ts
frontend/src/wasm/: package.json  security_enclave.d.ts  security_enclave.js  security_enclave_bg.wasm  security_enclave_bg.wasm.d.ts
security_enclave/: Cargo.toml
security_enclave/src/: lib.rs
