[package]
name = "security_enclave"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
aes-gcm = "0.10"
rand = { version = "0.8", features = ["std_rng"] }
getrandom = { version = "0.2", features = ["js"] }
zeroize = { version = "1.7", features = ["derive"] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
